@@ -9,6 +9,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - lfuncreate() change of format for (p,d)->Lp closure:
       - Lp here and in bad primes [p,Lp] must now use the actual local
         factor and not its inverse
+      - d is now the exact number of terms needed (was 1 less), i.e.
+        one need only return Lp + O(x^d)
       - bad primes are given as a separate 2nd component:
         [Lp, [[p1,L1],...[pk,Lk]]], not as [Lp, [p1,L1],...[pk,Lk]]
 
