@@ -43,13 +43,13 @@ Doc: This low-level routine creates \tet{Ldata} structures, needed by
  A second format is limited to $L$-functions affording an
  Euler product. It is a closure of arity 2 \kbd{(p,d)->F(p)} giving the
  local factor $L_p(X)$ at $p$ as a rational function, to be evaluated at
- $p^{-s}$ as in \kbd{direuler}; $d$ is set to \kbd{logint}$(n,p)$, where
+ $p^{-s}$ as in \kbd{direuler}; $d$ is set to \kbd{logint}$(n,p)$ + 1, where
  $n$ is the total number of Dirichlet coefficients $(a_1,\dots,a_n)$ that will
- be computed in this way.
- The parameter $d$ allows to compute only part of
+ be computed. In other words, the smallest integer $d$ such that $p^d > n$.
+ This parameter $d$ allows to compute only part of
  $L_p$ when $p$ is large and $L_p$ expensive to compute: any polynomial
- (or \typ{SER}) congruent to $L_p$ modulo $X^{d+1}$ is acceptable since only
- the coefficients of $X^0, \dots, X^d$ are needed to expand the Dirichlet
+ (or \typ{SER}) congruent to $L_p$ modulo $X^d$ is acceptable since only
+ the coefficients of $X^0, \dots, X^{d-1}$ are needed to expand the Dirichlet
  series. The closure can of course ignore this parameter:
 
  \bprog
