@@ -116,15 +116,15 @@ L[5]*=4;
 lfuncheckfeq(L)
 
 print("Curve y^2=",x^5+x);
-fun(p, d)= \\ if (d < 2), only 1 + trace term is needed
+fun(p, d)= \\ if (d == 2), only 1 + trace term is needed
 {
   my(p16=p%16, p8=p16%8);
-  if (d < 2 && p8 != 1, return (1));
+  if (d == 2 && p8 != 1, return (1));
   if (p8 == 5 || p8 == 7, return((1+p*x^2)^-2));
-  my([c,d] = qfbsolve(Qfb(1,0,2),p));
-  if (p8 == 3, return (1 / (1 + (-4*c^2 + 2*p)*x^2 + p^2*x^4)));
-  if (c%4 != 1, c=-c);
-  if(p16==1,(1-2*x*c+p*x^2)^-2, (1+2*x*c+p*x^2)^-2);
+  my([u,v] = qfbsolve(Qfb(1,0,2),p));
+  if (p8 == 3, return (1 / (1 + (-4*u^2 + 2*p)*x^2 + p^2*x^4)));
+  if (u%4 != 1, u=-u);
+  if(p16==1,(1-2*x*u+p*x^2)^-2, (1+2*x*u+p*x^2)^-2);
 }
 L=lfuncreate([[(p,d)->fun(p, d),[[2, 1]]], 0, [0,0,1,1], 2, 2^16, -1]);
 default("realprecision",38)
@@ -134,11 +134,11 @@ lfun(L,1,1)
 
 print("Curve y^2=",x^5+1);
 B=bnfinit(polcyclo(5));
-fun2(p, d)= \\ if (d < 2), only 1 + trace term is needed
+fun2(p, d)= \\ if (d == 2), only 1 + trace term is needed
 {
   my(p10 = p%10);
   if (p10 != 1,
-    if (d < 2, return (1));
+    if (d == 2, return (1));
     return (if (p10==9, 1 / (1+2*p*x^2+p^2*x^4), 1 / (1 + p^2*x^4)));
   );
   my (u = nfbasistoalg(B, bnfisprincipal(B,idealprimedec(B,p)[1])[2]));
@@ -146,7 +146,7 @@ fun2(p, d)= \\ if (d < 2), only 1 + trace term is needed
   for (i = 0, 9,
     my (b = (-x)^i * a);
     my (t = nfelttrace(B, b), t10 = t % 10);
-    if (t10 == 4, return(if (d < 2, 1 + t*x, 1 / polrecip(minpoly(b)))));
+    if (t10 == 4, return(if (d == 2, 1 + t*x, 1 / polrecip(minpoly(b)))));
   );
 }
 
@@ -189,7 +189,7 @@ id5=idealprimedec(K,5)[1];
 B=bnrinit(K,id5,1);
 F(p,d)=
 {
-  my(pr=idealprimedec(K, p, d));
+  my(pr=idealprimedec(K, p, d-1));
   1 / simplify(lift(prod(k=1,#pr, 1 - G(pr[k])*X^pr[k].f)));
 }
 G(pr)=
