@@ -188,6 +188,8 @@ BA   29- keri replaced by ZM_ker (use modular algorithm)
      31- lfuncreate() change of format for (p,d)->Lp closure:
          - Lp here and in bad primes [p,Lp] must now use the actual local
            factor and not its inverse
+         - d is now the exact number of terms needed (was 1 less), i.e.
+           one need only return Lp + O(x^d)
          - bad primes are given as a separate 2nd component:
            [Lp, [[p1,L1],...[pk,Lk]]], not as [Lp, [p1,L1],...[pk,Lk]]
 
